# perspectiva_dados_web_scraping

./: .gitignore  20260412_webscraping_seu_dinheiro.ipynb  README.md  main.py  pyproject.toml
