[project]
name = "perspectiva-dados-web-scraping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "polars>=1.41.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
